--- a/css/style.css
+++ b/css/style.css
@@ -1413,3 +1413,15 @@ main {
   color: rgb(246, 38, 38);
   text-transform: none;
 }
+
+.error-message {
+  z-index: '100';
+    position: absolute;
+    left: 0;
+    top: 0;
+    right: 0;
+    padding: 10px 3px;
+    font-size: 20px;
+    text-align: center;
+    background-color: red;
+}
